[package]
name = "radio-control-hal"
authors = ["Tiago Lernould <tiagolernould@gmail.com>"]
description = "A HAL for radio control receivers and transmitters"
license = "MIT"
edition = "2021"
version = "0.1.0"

[features]
std = [ ]
default = [ ]

[dependencies]
embedded-hal = "1.0.0"
radio = { git = "https://github.com/rust-iot/radio-hal" }